# rayguipainter

./: README.md
examples/: CMakeLists.txt
examples/showcase/: main.c
src/: rayguipainter.h
